--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "description": "",
     "main": "index.js",
     "scripts": {
+      "repeat:function": "node --watch ./functions/repeat.js",
       "code-wars": "node --watch ./namu-darbai/code-wars.js",
         "for-in": "node --watch ./loops/for-in.js",
         "for-of": "node --watch ./loops/for-of.js",
